src/test/deca/syntax/invalid/lexer/chaines_bslash.deca
// Description:
//    chaine avec \
//    lexicalement incorrect
//
// Resultats:
//    Ligne 12 : token recognition error at: '"a\n'
//
// Historique:
//    cree le 09/01/2023
//

"a\n\t/l\r
bruh
"